# frankenssl

./: .gitignore  .gitmodules  BUILDING.md  LICENSE  README.md
hst/: CMakeLists.txt
hst/boring/: CMakeLists.txt  boring.c  boring.h
hst/examples/init/: init.c
hst/include/: hst.h
hst/libre/: CMakeLists.txt  libre.c
hst/open/: CMakeLists.txt  open.c
hst/stub/: CMakeLists.txt  stub.c
libhst/: .gitignore  CMakeLists.txt
libhst/boring/: CMakeLists.txt  deinit.c  init.c  version.c
libhst/examples/init/: CMakeLists.txt  init.c
libhst/include/: hst.h  hst_mac.h
libhst/libre/: CMakeLists.txt  deinit.c  init.c  version.c
libhst/open/: CMakeLists.txt  deinit.c  init.c  version.c
libhst/stub/: stub.c
